syntax = "proto3";

package dg.model;

message Time {
    int64 Seconds = 1;
    int64 NanoSecs = 2;
}

enum RecognizeType {
	REC_TYPE_DEFAULT = 0;
	REC_TYPE_VEHICLE = 1;
	REC_TYPE_FACE = 2;
	REC_TYPE_ALL = 3;
}

enum RecognizeFunctions {
    RECFUNC_NONE = 0;
    RECFUNC_VEHICLE = 1;
    RECFUNC_VEHICLE_DETECT = 2;
    RECFUNC_VEHICLE_TRACK = 3;
    RECFUNC_VEHICLE_STYLE = 4;
    RECFUNC_VEHICLE_COLOR = 5;
    RECFUNC_VEHICLE_MARKER = 6;
    RECFUNC_VEHICLE_PLATE = 7;
    RECFUNC_VEHICLE_FEATURE_VECTOR = 8;
    RECFUNC_FACE = 9;
    RECFUNC_FACE_DETECTOR = 10;
    RECFUNC_FACE_FEATURE_VECTOR = 11;
}

message MatrixError {
	int32 Code = 1;
	string Message = 2;
}

message VideoMetadata {
	int64 Timestamp = 1;
	int32 Duration = 2;
	int32 SensorId = 3;
	string SensorName = 4;
	string SensorUrl = 5;
}

message Image {
	string Id = 1;
	int32 Width = 2;
	int32 Height = 3;
	string URI = 4;
	string BinData = 5; // base64 format image
}

message CutboardImage {
	VideoMetadata Metadata = 1;
	Cutboard Cutboard = 2;
	Image Img = 3;
}

message Color {
	int32 Id = 1; //DEPLICATE!
	float Confidence = 2; //颜色汉字表示
	string ColorName = 3; //颜色识别置信度
}

message Cutboard {
	uint32 X = 1;
	uint32 Y = 2;
	uint32 Width = 3;
	uint32 Height = 4;
	uint32 ResWidth = 5;
	uint32 ResHeight = 6;
}

enum ObjType {
	UNKNOWNOBJ = 0;
	VEHICLE = 1;
	BICYCLE = 2;
	TRICYCLE = 3;
	PEDESTRIAN = 4;
	FACE = 1024;
	VEHICLE_VECTOR = 2048;
	BICYCLE_VECTOR = 2049;
	TRICYCLE_VECTOR = 2050;
	PEDESTRIAN_VECTOR = 2051;
	FACE_VECTOR = 3072;
}

enum DataFmtType {
	UNKNOWNFMT = 0;
	JSON = 1;
	PROTOBUF = 2;
}

message FeatureVector {
	int64 Id = 1; 		//特征的关键字
	string Feature = 2;	//特征值
}
